A whole bunch of whitespace changes.
Additionally removed the throws signature from a log method.